even more rowa changes

--- a/src/public/ROWA/fights.html
+++ b/src/public/ROWA/fights.html
@@ -25,7 +25,7 @@
     height:100%;
     width: 50%;
     min-width: 400px;
-    max-width:60%;
+    max-width:50%;
     background:var(--panel);
     border-left:1px solid rgba(255,255,255,0.03);
     transform:translateX(0);
@@ -59,7 +59,7 @@
   canvas{width:100% !important;height:180px !important}
 
   /* history controls */
-  .history-controls{display:flex;align-items:center;gap:8px;margin:12px 0}
+  .history-controls{display:flex;align-items:center;gap:8px;margin:12px 0;width: 100%;}
   .history-controls .label{font-size:13px;color:var(--muted);min-width:140px}
   .btn{background:transparent;border:1px solid rgba(255,255,255,0.04);color:#cfe6ff;padding:6px 8px;border-radius:6px;cursor:pointer}
   .range{flex:1}
