--- a/src/public/anime3/main.html
+++ b/src/public/anime3/main.html
@@ -1,49 +1,49 @@
-<!doctype html>
-<html>
-<head><meta charset="utf-8"><title>anime3 full</title></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Fetch and Decompress</title>
+  <script src="https://unpkg.com/pako@2.1.0/dist/pako.min.js"></script>
+</head>
 <body>
-<pre id="out">loading…</pre>
+  <h1>Anime Data</h1>
+  <pre id="output">Loading...</pre>
 
-<script src="https://unpkg.com/pako@2.1.0/dist/pako.min.js"></script>
-<script>
-function decompress(gzBuffer, cb) {
-  try {
-    const uint8 = gzBuffer instanceof Uint8Array ? gzBuffer : new Uint8Array(gzBuffer);
-    const out = pako.ungzip(uint8);
-    const parsed = JSON.parse(new TextDecoder('utf-8').decode(out));
-    const nodes = restore(parsed.nodes);
-    const edges = restore(parsed.edges);
-    cb(null, { nodes, edges });
-  } catch (e) { cb(e); }
-}
+  <script>
+    async function fetchAndDecompress() {
+      const outputEl = document.getElementById('output');
 
-function restore(value) {
-  if (value && value.__type === 'Map') return new Map(value.value.map(([k,v]) => [k, restore(v)]));
-  if (value && value.__type === 'Set') return new Set(value.value.map(restore));
-  if (Array.isArray(value)) return value.map(restore);
-  if (value && typeof value === 'object') {
-    const out = {}; for (const [k,v] of Object.entries(value)) out[k] = restore(v); return out;
-  }
-  return value;
-}
+      try {
+        // 1. Fetch from your API
+        const res = await fetch('/api/anime3/data');
+        if (!res.ok) throw new Error('Failed to fetch data');
 
-function replacer(k, v) {
-  if (v instanceof Map) return Array.from(v.entries());
-  if (v instanceof Set) return Array.from(v);
-  return v;
-}
+        const json = await res.json();
+        const base64 = json.data;
 
-const out = document.getElementById('out');
-fetch('/api/anime3/data')
-  .then(r => { if (!r.ok) throw new Error(r.status+' '+r.statusText); return r.arrayBuffer(); })
-  .then(ab => decompress(ab, (err, res) => {
-    if (err) return out.textContent = 'decompress error: ' + err;
-    const nodes = res.nodes;
-    const edges = res.edges;
-    console.log(nodes, edges);
-    out.textContent = JSON.stringify({ nodes: nodes, edges: edges }, replacer, 2);
-  }))
-  .catch(e => out.textContent = 'fetch error: ' + e);
-</script>
+        console.log("base64:", base64)
+
+        function base64ToUint8Array(base64) {
+          const raw = atob(base64);
+          const arr = new Uint8Array(raw.length);
+          for (let i = 0; i < raw.length; i++) {
+            arr[i] = raw.charCodeAt(i);
+          }
+          return arr;
+        }
+
+        const compressed = base64ToUint8Array(base64);
+
+        const decompressed = pako.inflate(compressed, { to: 'string' });
+
+        outputEl.textContent = decompressed;
+      } catch (err) {
+        console.error(err);
+        outputEl.textContent = 'Error: ' + err.message;
+      }
+    }
+
+    fetchAndDecompress();
+  </script>
 </body>
 </html>
