--- a/src/public/auth/index.html
+++ b/src/public/auth/index.html
@@ -141,7 +141,9 @@
           password: document.getElementById('login-password').value
         })
       });
-      document.getElementById('login-response').textContent = await res.text();
+      const json = await res.json();
+      localStorage.setItem('session', json.sesh);
+      document.getElementById('login-response').textContent = JSON.stringify(json);
     }
 
     async function register() {
