--- a/src/public/anime3/main.html
+++ b/src/public/anime3/main.html
@@ -18,16 +18,16 @@
 
     #recs {overflow-y: auto; overflow-x: hidden; max-height: 90%};
     #search { width: 100%; padding: 8px; margin-bottom: 8px; }
-    #results { border: 1px solid #1b1b1b; padding: 8px; max-height: 420px; overflow: auto; }
+    #results { max-height: calc(100vh - 200px); border: 1px solid #2b2b2b; padding: 8px; max-height: 420px; overflow: auto; }
 
     .item { height: 96px; border-radius: 8px; cursor: pointer; position: relative; overflow: hidden; margin-bottom: 8px; background-color: #0f0f0f; background-size: cover; background-position: center; display: block; }
-    .item:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(0,0,0,0.6); }
-    .selected { outline: 3px solid rgba(90,166,255,0.12); }
+    .item:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(0, 0, 0, 0.6); }
+    .selected { outline: 1px solid rgb(255, 255, 255); }
 
     .overlay { position: absolute; inset: 0; background: linear-gradient(90deg, rgb(0 0 0 / 60%), rgba(0, 0, 0, .25)); display: flex; align-items: center; padding: 12px 16px; gap: 12px; }
 
     #leftPanel { width: 40% }
-    .panel { border: 1px solid #5b5b5b; padding: 12px; padding-top: 0px; border-radius: 6px; width: 55%; max-height: 90% }
+    .panel { border: 1px solid #424242; padding: 12px; padding-top: 0px; border-radius: 6px; width: 55%; max-height: 90% }
     .list { list-style: none; padding: 0; margin: 0; }
 
     .badge { padding: 2px 6px; border-radius: 6px; background: rgba(20,20,20,0.8); font-weight: 600; text-align:center; }
@@ -37,7 +37,6 @@
     .sel-pill button { background: transparent; border: 0; cursor: pointer; font-size: 14px; color: #ddd; }
 
     .genre-line { font-size: 12px; color: #c7d; margin-top: 4px; }
-    .pill-genres { font-size: 12px; color: #ccc; margin-left: 6px; }
 
     .item-content { color: #fff; display: flex; flex-direction: column; gap: 4px; max-width: 100%; }
     .item-title { font-weight: 700; font-size: 16px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
