--- a/src/public/anime3/main.html
+++ b/src/public/anime3/main.html
@@ -6,7 +6,7 @@
   <script src="https://unpkg.com/pako@2.1.0/dist/pako.min.js"></script>
   <style>
     :root { color-scheme: dark; }
-    body { overflow-y: hidden; overflow-x: auto; font-family: system-ui; color: #fff; padding: 18px; max-width: 1600px; margin: auto; }
+    body { overflow-y: auto; overflow-x: auto; font-family: system-ui; color: #fff; padding: 18px; max-width: 1600px; margin: auto; }
 
     #layout {
       height: 100vh;
